# flatterer

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml  dist.yml  docs.yml
docs/: changelog.md
flatterer/: __init__.py
flatterer/static/: index.html
flatterer/static/assets/: index.84e0a51b.js
