[project]
name="flatterer"
description = "Opinionated JSON to CSV converter"
dependencies = ["orjson", "ijson", "click", "pandas"]
readme="README.md"
repository="https://github.com/kindly/flatterer"
homepage="https://flatterer.opendata.coop/index.html"
documentation="https://flatterer.opendata.coop/index.html"
license = "License :: OSI Approved :: MIT License"
dynamic = ["version"]

[build-system]
requires = ["maturin>=0.13"]
build-backend = "maturin"

[project.scripts]
flatterer = "flatterer:cli"
